Configuration: utils api error and response customize

--- a/SYPHAR-BACKEND/syphar-tube/package.json
+++ b/SYPHAR-BACKEND/syphar-tube/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "cmplx-server",
+  "name": "syphar-tube",
   "version": "1.0.0",
-  "description": "A complex server using express",
+  "description": "syphartube is a complex server using express",
   "keywords": [
     "cmplx-server",
+    "syphar-tube",
     "syphar-backend"
   ],
   "license": "ISC",
@@ -14,8 +15,11 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.19.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
