--- a/SYPHAR-BACKEND/syphar-tube/package.json
+++ b/SYPHAR-BACKEND/syphar-tube/package.json
@@ -15,11 +15,14 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
+    "mongoose-aggregate-paginate-v2": "^1.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
