Configuration: Multer setup, cloudinary utility implemented

--- a/SYPHAR-BACKEND/syphar-tube/.env.sample
+++ b/SYPHAR-BACKEND/syphar-tube/.env.sample
@@ -1,3 +1,12 @@
 PORT=8080
 CORS_ORIGIN=http://localhost:5173,http://localhost:5174
 MONGODB_URI=mongodb+srv://xsh_shahab:add-your-own-password-here@cluster0.ibjbxbf.mongodb.net
+
+ACCESS_TOKEN_SECRET=syphar.access-token-secret
+ACCESS_TOKEN_EXPIRY=1d
+
+REFRESH_TOKEN_SECRET=syphar.refresh-token-secret
+REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_API_KEY=SYPHAR.TUBE-CLOUDINARY-API-KEY
+CLOUDINARY_API_SECRET=SYPHAR.TUBE-CLOUDINARY-API-SECRET
